# finbert-trader

./: .env  .gitignore  README.md  __init__.py  experiment_main.py  main.py  nasdaq_100_benchmark_visualization.py  news_data_analysis.py  pyproject.toml  quick_experiment_test.ipynb  quick_experiment_test.py
src/finbert_trader/: __init__.py  config.py  config_setup.py  config_trading.py  data_resource.py  exper_scheme.py  exper_tracker.py  main.py  main_agent.py  main_backtest.py  main_env.py  stock_trading_env.py  trading_agent.py  trading_analysis.py  trading_backtest.py
src/finbert_trader/agent/: trading_agent.py
src/finbert_trader/backtest/: plot_backtest.py  trading_backtest.py
src/finbert_trader/data/: data_resource.py
src/finbert_trader/deployment/: edge_deployment.py
src/finbert_trader/environment/: stock_trading_env.ipynb  stock_trading_env.py
src/finbert_trader/features/: __init__.py  feature_engineer.py  news_features.py  stock_features.py
src/finbert_trader/preprocessing/: feature_engineer.py  news_features.py  stock_features.py
src/finbert_trader/visualize/: __init__.py  visualize_backtest.py  visualize_experiment.py  visualize_features.py  visualize_news.py
