# ========================= Project Metadata ===========================

[project]
name = "finbert_trader"
version = "0.1.0"
description = "Starter Pixi project template"
authors = [{name = "Shicheng Zeng", email = "archyz.studio@gmail.com"}]
requires-python = ">=3.11"
dependencies = []  # PyPI 依赖：可用 `pixi add --pypi PACKAGE` 添加

# ========================= Pixi Config ================================

[tool.pixi.project]
channels = ["conda-forge"]
platforms = [
    "linux-64",
    "osx-arm64",
    "win-64"
]

[tool.pixi.dependencies]
python-dotenv = "*"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
requests = "*"
typer = "*"         # CLI 工具
ipykernel = "*"     # 支持 Jupyter Kernel 运行

# 日志与可视化
tensorboard = "*"
wandb = "*"

# 系统兼容
tqdm = "*"

# 以下由脚本动态添加
# [tool.pixi.pypi-dependencies]
# my_project = { path = ".", editable = true }

# ========================= Build System ==============================

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# ========================= Features ===================================
[tool.pixi.feature.nlp.dependencies]
torch = ">=2.2.0,<3"
huggingface-hub = "*"
transformers = "*"
finbert-embedding = "*"
datasets = "*"

[tool.pixi.feature.rlgym.dependencies]
gym = "*"
stable-baselines3 = "*"

[tool.pixi.feature.finance.dependencies]
ta-lib = "*"
pytz = "*"
backtrader = "*"

[tool.pixi.feature.edge-deploy.dependencies]
coremltools = "*"
onnx = "*"
onnxruntime = "*"

[tool.pixi.feature.notebooks.dependencies]
jupyterlab = "*"

[tool.pixi.feature.code-quality.dependencies]
ruff = "*"
pylint = "*"
black = "*"
isort = "*"

[tool.pixi.feature.testing.dependencies]
pytest = "*"
pytest-cov = "*"

# ========================= Environments ===============================

[tool.pixi.environments]
dev = ["notebooks", "code-quality", "testing"]

# ========================= Tasks ======================================

[tool.pixi.tasks]
start = "python src/__PROJECT_NAME__/main.py"
test = "pytest --cov=src"
format = "ruff format src/"

[tool.pixi.feature.notebooks.tasks]
lab = "jupyter lab"

[tool.pixi.feature.code-quality.tasks]
lint = "pylint src/"
sort = "isort src/"
